WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312438
After spending some time on a page, web content hangs forcing page reload - cnn.com, yahoo.com
https://bugs.webkit.org/show_bug.cgi?id=312438
Summary
After spending some time on a page, web content hangs forcing page reload - c...
Nipun Shukla
Reported
2026-04-15 20:10:05 PDT
rdar://174443020
Attachments
Add attachment
proposed patch, testcase, etc.
Nipun Shukla
Comment 1
2026-04-15 20:24:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62874
EWS
Comment 2
2026-04-28 09:08:46 PDT
Committed
312205@main
(f55db8dff653): <
https://commits.webkit.org/312205@main
> Reviewed commits have been landed. Closing PR #62874 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug